--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "express": "~4.5.1",
-    "file-saver": "^1.3.3",
+    // "file-saver": "^1.3.3",
     "force-ssl-heroku": "^1.0.2",
     "jquery": "^3.2.1",
     "nodemailer": "^4.4.1",
