--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.3",
+    "@angular/animations": "^5.0.0",
     "@angular/cli": "1.6.3",
-    "@angular/common": "^5.1.3",
-    "@angular/compiler": "^5.1.3",
-    "@angular/compiler-cli": "^5.1.3",
-    "@angular/core": "^5.1.3",
-    "@angular/forms": "^5.1.3",
-    "@angular/http": "^5.1.3",
-    "@angular/platform-browser": "^5.1.3",
-    "@angular/platform-browser-dynamic": "^5.1.3",
-    "@angular/router": "^5.1.3",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "body-parser": "~1.4.2",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "express": "~4.5.1",
-    // "file-saver": "^1.3.3",
+    "file-saver": "^1.3.3",
     "force-ssl-heroku": "^1.0.2",
     "jquery": "^3.2.1",
     "nodemailer": "^4.4.1",
@@ -44,11 +44,11 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/language-service": "^5.1.3",
+    "@angular/language-service": "^5.0.0",
     "@types/file-saver": "^1.3.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.96",
+    "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
