--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.6.7",
-    "@angular/compiler-cli": "^5.2.0",
     "@angular/animations": "^5.2.0",
+    "@angular/cli": "1.6.7",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
@@ -28,10 +28,11 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "body-parser": "~1.4.2",
-    "express": "~4.5.1",
-    "force-ssl-heroku": "^1.0.2",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "express": "~4.5.1",
+    "force-ssl-heroku": "^1.0.2",
     "jquery": "^3.2.1",
     "ngx-swiper-wrapper": "^5.3.4",
     "popper.js": "^1.13.0",
