--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "new-unmasterd",
   "version": "0.0.0",
   "license": "MIT",
+  "main":"app.js",
   "scripts": {
     "ng": "ng",
-    "start": "node app.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
