--- a/package.json
+++ b/package.json
@@ -29,18 +29,19 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "body-parser": "~1.4.2",
-    "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
-    "cors": "^2.8.4",
-    "express": "~4.5.1",
-    "force-ssl-heroku": "^1.0.2",
-    "jquery": "^3.2.1",
-    "ngx-swiper-wrapper": "^5.3.4",
-    "popper.js": "^1.13.0",
     "rxjs": "^5.5.6",
     "typescript": "~2.5.3",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+        "body-parser": "~1.4.2",
+        "bootstrap": "4.0.0-beta.2",
+        "cors": "^2.8.4",
+        "express": "~4.5.1",
+        "force-ssl-heroku": "^1.0.2",
+        "jquery": "^3.2.1",
+        "ngx-swiper-wrapper": "^5.3.4",
+        "popper.js": "^1.13.0",
+        "nodemailer": "^4.4.1"
   },
   "devDependencies": {
     "@angular/language-service": "^5.2.0",
